--- a/_data/datapackage_additions.toml
+++ b/_data/datapackage_additions.toml
@@ -1293,10 +1293,9 @@ description = "Monthly stock prices for five companies from 2000 to 2010."
 [[resources]] # Path: udistrict.json
 path = "udistrict.json"
 description = """Point locations of restaurants and cafes in Seattle's University 
-District, categorized by cuisine type (e.g., "coffee", "pizza", "korean"). Used to 
-create a [ridgeline plot example](https://vega.github.io/vega/examples/u-district-cuisine/) showing the prevalence 
-of various food and beverage categories. The example graphic using this dataset states that it originally appeared 
-in Alaska Airlines Beyond Magazine (Sep 2017, p. 120)"""
+District, categorized by cuisine type. Used to create a [ridgeline plot example](https://vega.github.io/vega/examples/u-district-cuisine/) 
+showing the prevalence of various food and beverage categories. The example graphic 
+using this dataset states that it originally appeared in Alaska Airlines Beyond Magazine (Sep 2017, p. 120)"""
 
 [resources.schema]
 [[resources.schema.fields]]
