--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "Common repository for example datasets used by Vega related projects.",
   "license": "BSD-3-Clause",
   "type": "module",
-  "exports": "./build/vega-datasets.js",
-  "types": "build/index.d.ts",
+  "exports": {
+    "default": "./build/vega-datasets.js",
+    "types": "./build/index.d.ts"
+  },
   "unpkg": "build/vega-datasets.min.js",
   "jsdelivr": "build/vega-datasets.min.js",
   "repository": {
@@ -26,12 +28,6 @@
     "d3-dsv": "^3.0.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.26.7",
-    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@babel/plugin-transform-runtime": "^7.25.9",
-    "@babel/preset-env": "^7.26.7",
-    "@babel/preset-typescript": "^7.26.0",
-    "@babel/runtime": "^7.26.7",
     "@release-it/conventional-changelog": "^10.0.0",
     "@rollup/plugin-json": "^6.1.0",
     "@rollup/plugin-node-resolve": "^16.0.0",
