fix(typing): declare aliases as types, use `Literal` correctly
See for more info:
- https://typing.readthedocs.io/en/latest/spec/aliases.html#type-statement
- https://typing.readthedocs.io/en/latest/spec/literal.html#literal

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -114,6 +114,7 @@ include = [
   "./scripts/build_datapackage.py",
   "./scripts/flights.py",
   "./scripts/income.py",
+  "./scripts/species.py",
 ]
 pythonPlatform = "All"
 pythonVersion = "3.12"
