--- a/_data/species.toml
+++ b/_data/species.toml
@@ -2,10 +2,10 @@
 
 [processing]
 item_ids = [
-  "58fa64ece4b0b7ea545257e3", # Coyote
-  "58fa513ce4b0b7ea5452521a", # Cardinal
-  "58fe0a6be4b007492829456e", # Alligator
-  "58fa3f0be4b0b7ea54524859", # American bullfrog
+  '58fa449fe4b0b7ea54524c5e', # American Robin
+  '58fa817ae4b0b7ea54525c2f', # White-tailed Deer
+  '58fa3f0be4b0b7ea54524859', # American Bullfrog
+  '58fe0f4fe4b0074928294636', # Common Gartersnake
 ]
 vector_fp = "../data/us-10m.json" # Relative path from TOML file
 output_dir = "../data" # Relative path from TOML file
