refactor: standardize column naming and enhance documentation
- Rename species columns for consistency and clarity:
  - GAP_Species -> gap_species_code
  - percent_habitat -> habitat_yearround_pct
  - CommonName -> common_name
  - ScientificName -> scientific_name
- Expand module docstring with detailed information about:
  - Data sources and resolution
  - Projection details
  - Habitat value meanings
  - Output format options
- Improve code comments for future extensibility
- reference habitat data source in species.toml
- list alternative output format options in toml
The changes prepare for potential future addition of seasonal
habitat data (and summer/winter habitat data) while maintaining backward compatibility.

--- a/_data/species.toml
+++ b/_data/species.toml
@@ -2,12 +2,12 @@
 
 [processing]
 item_ids = [
-  '58fa449fe4b0b7ea54524c5e', # American Robin
-  '58fa817ae4b0b7ea54525c2f', # White-tailed Deer
-  '58fa3f0be4b0b7ea54524859', # American Bullfrog
-  '58fe0f4fe4b0074928294636', # Common Gartersnake
+  '58fa449fe4b0b7ea54524c5e', # American Robin (Habitat)
+  '58fa817ae4b0b7ea54525c2f', # White-tailed Deer (Habitat)
+  '58fa3f0be4b0b7ea54524859', # American Bullfrog (Habitat)
+  '58fe0f4fe4b0074928294636', # Common Gartersnake (Habitat)
 ]
 vector_fp = "../data/us-10m.json" # Relative path from TOML file
 output_dir = "../data" # Relative path from TOML file
-output_format = "arrow" # Default, can be overridden
+output_format = "arrow" # Other formats: "csv", "parquet"
 debug = false # Controls logging level
