--- a/_data/datapackage_additions.toml
+++ b/_data/datapackage_additions.toml
@@ -1286,6 +1286,61 @@ description = "Date of monthly observation in the format 'MMM D YYYY'"
 name        = "price"
 description = "Closing price of the S&P 500 index for the given month"
 
+[[resources]] # Path: species.arrow
+path = "species.arrow"
+description = """
+Percentage of year-round habitat for four species -- American robin, White-tailed deer, 
+American bullfrog, and common gartersnak -- within US counties, derived from USGS 
+Gap Analysis Project (GAP) Species Habitat Maps. Data is provided at a 30-meter 
+resolution and covers the contiguous United States. Habitat percentages are calculated 
+by overlaying species habitat rasters (year-round habitat represented by value 3) with 
+US county boundaries.
+
+The habitat maps are in Albers Conical Equal Area projection (EPSG:5070). County boundaries 
+are derived from US Census Bureau cartographic boundary files (1:10,000,000 scale), from 
+`US-10m.json` in this repository. This dataset only includes *year-round* habitat. 
+The original raster data also contains values for summer and winter habitat, which are 
+*not* included in this dataset. Data was processed using the `exactextract` library 
+for zonal statistics.
+"""
+
+[resources.schema]
+[[resources.schema.fields]]
+name        = "item_id"
+description = "Unique identifier for the species data item on ScienceBase."
+
+[[resources.schema.fields]]
+name        = "common_name"
+description = "Common name of the species."
+
+[[resources.schema.fields]]
+name        = "scientific_name"
+description = "Scientific name of the species."
+
+[[resources.schema.fields]]
+name        = "gap_species_code"
+description = "GAP Species Code, a unique identifier for the species within the GAP dataset."
+
+[[resources.schema.fields]]
+name        = "county_id"
+description = "Combined state and county FIPS code, identifying the US county."
+
+[[resources.schema.fields]]
+name        = "habitat_yearround_pct"
+description = "Percentage of the county area that is classified as year-round habitat for the species (rounded to 4 decimal places)."
+
+[[resources.sources]]
+title = "USGS Gap Analysis Project (GAP) Species Habitat Maps"
+path  = "https://www.usgs.gov/programs/gap-analysis-project"   # General GAP link
+
+[[resources.sources]]
+title = "US Census Bureau Cartographic Boundary Files (1:10,000,000)"
+path  = "https://www.census.gov/geographies/mapping-files/time-series/geo/cartographic-boundary.html"
+
+[[resources.licenses]]
+title = "U.S. Government Dataset"
+path  = "https://www.usa.gov/government-works"
+
 [[resources]] # Path: stocks.csv
 path        = "stocks.csv"
 description = "Monthly stock prices for five companies from 2000 to 2010."
