# feat: Add geographic filtering to focus on coterminous US counties
This commit enhances the GAP habitat analysis script to focus specifically on coterminous (contiguous) US counties by implementing a geographic filtering system based on FIPS codes.

## Changes:
- Added geographic filtering configuration in TOML to exclude Alaska, Hawaii, Puerto Rico, and Virgin Islands
- Refactored county data loading into smaller, specialized methods for better maintainability
- Modified habitat analysis to explicitly handle coterminous US counties, filling missing values with zeros
- Updated documentation to clarify the geographic scope of the analysis
- Improved error handling and logging, especially for county boundary processing
- Changed default output format from arrow to csv

## Technical Details:
- The `HabitatDataProcessor` class now accepts a full configuration object
- Added `_filter_to_coterminous_us` method to process excluded areas based on FIPS codes
- Enhanced `save_results` to maintain complete county coverage with consistent data formatting
- Configuration now includes a structured `[processing.geographic_filter]` section

This change ensures consistent habitat analysis across the coterminous United States by standardizing which areas are included in the analysis.

--- a/_data/species.toml
+++ b/_data/species.toml
@@ -11,3 +11,12 @@ vector_fp = "../data/us-10m.json" # Relative path from TOML file
 output_dir = "../data" # Relative path from TOML file
 output_format = "csv" # Available formats: "csv", "parquet", "arrow"
 debug = false # Controls logging level
+
+# Areas excluded from analysis to focus on coterminous US
+[processing.geographic_filter]
+excluded_fips = [
+  { code = "02", name = "Alaska" },
+  { code = "15", name = "Hawaii" },
+  { code = "72", name = "Puerto Rico" },
+  { code = "78", name = "Virgin Islands" },
+]
