--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,15 @@ version = "2.11.0"
 
 [dependency-groups]
 dev = ["ipython[kernel]>=8.30.0", "ruff>=0.8.2", "taplo>=0.9.3"]
+geo-species = [
+  "exactextract",
+  "geopandas",
+  "pandas[pyarrow]",
+  "rasterio",
+  "requests",
+  "sciencebasepy",
+  "setuptools",
+]
 
 [tool.ruff]
 extend-exclude = [
