--- a/pyproject.toml
+++ b/pyproject.toml
@@ -80,6 +80,7 @@ pydocstyle = { convention = "numpy" }
 select = [
   "ANN",     # flake8-annotations
   "B",       # flake8-bugbear
+  "BLE",     # flake8-blind-except
   "C4",      # flake8-comprehensions
   "C90",     # mccabe (complex-structure)
   "D",       # pydocstyle
