--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@ version = "2.11.0"
 [dependency-groups]
 dev = ["ipython[kernel]>=8.30.0", "ruff>=0.8.2", "taplo>=0.9.3"]
 geo-species = [
-  "exactextract",
+  "exactextract>=0.2.1",
   "geopandas",
   "pandas[pyarrow]",
   "rasterio",
