ci(ruff): Add (`TRY`) rule group
https://docs.astral.sh/ruff/rules/#tryceratops-try

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -111,6 +111,7 @@ select = [
   "SIM",     # flake8-simplify
   "TC",      # flake8-type-checking
   "TID",     # flake8-tidy-imports
+  "TRY",     # tryceratops
   "UP",      # pyupgrade
   "W",       # pycodestyle-warning
 ]
