feat: Add Species Habitat Dataset for Faceted Map Examples (#684)
* feat: add species.csv and generation script

* chore: fix Ruff linting warnings

* chore: formatting with Ruff

* feat: switch to ScienceBase API for data retrieval

- Replace direct URL downloads with ScienceBase API client (sciencebasepy)
- Remove niquests dependency in favor of native ScienceBase download handling
- Enhance logging for better debugging of file downloads and extractions
- Add explicit ZIP file cleanup after TIF extraction
- Update dependencies to include sciencebasepy and setuptools

* fix: ruff formatting

* feat: overhaul habitat data processing pipeline

Restructures the species habitat analysis script:

- Implement modular architecture with ScienceBaseClient, RasterSet, and
  HabitatDataProcessor classes for better maintainability
- Integrate sciencebasepy for ZIP-based habitat map downloads from USGS
  ScienceBase, with automatic cleanup of temporary files
- Add multi-format output support (CSV/Parquet/Arrow) with Arrow as default,
  using dictionary encoding for optimized storage and performance
- Enhance metadata by including species common and scientific names from
  ScienceBase API
- Add comprehensive CLI arguments for configuration and debug logging
- Improve robustness with better error handling and type annotations

* chore: ruff format

* fix(typing): declare aliases as types, use `Literal` correctly

See for more info:
- https://typing.readthedocs.io/en/latest/spec/aliases.html#type-statement
- https://typing.readthedocs.io/en/latest/spec/literal.html#literal

* refactor: use zipfile.Path for TIF extraction

* Switch to using zipfile.Path for more Pythonic ZIP file handling
* Enforce expectation of exactly one TIF file per ZIP
* Add error handling for unexpected file counts

* feat: Use TOML config and improve ZIP extraction in species.py

Refactors `species.py` to use TOML configuration (`_data/species.toml`)
instead of `argparse`, improving flexibility and maintain

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,17 @@ version = "2.11.0"
 
 [dependency-groups]
 dev = ["ipython[kernel]>=8.30.0", "ruff>=0.8.2", "taplo>=0.9.3"]
+geo-species = [
+  "exactextract>=0.2.1",
+  "geopandas",
+  "pandas[pyarrow]",
+  "pyarrow-stubs",
+  "rasterio",
+  "requests",
+  "sciencebasepy",
+  "setuptools",
+  "tqdm",
+]
 
 [tool.ruff]
 extend-exclude = [
@@ -70,6 +81,7 @@ pydocstyle = { convention = "numpy" }
 select = [
   "ANN",     # flake8-annotations
   "B",       # flake8-bugbear
+  "BLE",     # flake8-blind-except
   "C4",      # flake8-comprehensions
   "C90",     # mccabe (complex-structure)
   "D",       # pydocstyle
@@ -99,6 +111,7 @@ select = [
   "SIM",     # flake8-simplify
   "TC",      # flake8-type-checking
   "TID",     # flake8-tidy-imports
+  "TRY",     # tryceratops
   "UP",      # pyupgrade
   "W",       # pycodestyle-warning
 ]
@@ -114,6 +127,7 @@ include = [
   "./scripts/build_datapackage.py",
   "./scripts/flights.py",
   "./scripts/income.py",
+  "./scripts/species.py",
 ]
 pythonPlatform = "All"
 pythonVersion = "3.12"
