--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "url": "git+http://github.com/vega/vega-datasets.git"
   },
   "author": {
-    "name": "UW Interactive Data Lab",
-    "url": "http://idl.cs.washington.edu"
+    "name": "Vega",
+    "url": "https://vega.github.io"
+  },
+  "funding": {
+    "url": "https://app.hubspot.com/payments/GyPC972GD9Rt"
   },
   "files": [
     "src",
