Refactor: Use `uv run` for project dev tools in CI
Switched from `uvx` to `uv run` for executing `ruff` and `taplo`
in the CI workflow.

This change ensures that the exact versions of these development
tools, as specified in the `uv.lock` file, are used during CI builds.
Using `uv run` activates the project's managed environment and is the
recommended approach for tools that are part of the project, promoting
reproducibility and consistency.

For further context on when to use `uv run` vs. `uvx`:
https://docs.astral.sh/uv/concepts/tools/#relationship-to-uv-run

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,12 +29,12 @@ jobs:
           enable-cache: true
 
       - name: Format toml
-        run: uvx taplo fmt --check --diff
+        run: uv run taplo fmt --check --diff
 
       - name: Format and lint (python)
         run: |
-          uvx ruff check
-          uvx ruff format --check
+          uv run ruff check
+          uv run ruff format --check
 
       - name: Install Node dependencies
         run: npm ci
