ci: Avoid formatting `pandas` toml
Should fix (https://github.com/vega/vega-datasets/actions/runs/15415948978/job/43378643934?pr=707)

--- a/taplo.toml
+++ b/taplo.toml
@@ -1,4 +1,8 @@
 #:schema taplo://taplo.toml
+
+exclude = [".venv/**/*.toml"]
+include = ["**/taplo.toml", "pyproject.toml"]
+
 [formatting]
 align_entries       = true
 allowed_blank_lines = 1
