--- a/_data/datapackage_additions.toml
+++ b/_data/datapackage_additions.toml
@@ -28,13 +28,15 @@ path  = "https://www.7-zip.org/license.txt"
 
 [[resources]] # Path: airports.csv
 path = "airports.csv"
-description = """Airports in the United States and its territories, including  major commercial, regional, 
+description = """Airports in the United States and its territories, including major commercial, regional, 
 and municipal airports. Contains information about each airport's location (latitude/longitude 
-coordinates), identification codes, name, city, state, and country."""
+coordinates), identification codes, name, city, state, and country. While the exact generation 
+source of this file is unknown, this data is consistent with files provided on a monthly 
+frequency by the FAA's [National Airspace System Resource](https://www.faa.gov/air_traffic/flight_info/aeronav/aero_data/NASR_Subscription/)."""
 
 [[resources.sources]]
-title = "FAA Aviation Facilities (Data.gov)"
-path  = "https://catalog.data.gov/dataset/aviation-facilities1"
+title = "Federal Aviation Administration"
+path  = "https://www.faa.gov/air_traffic/flight_info/aeronav/aero_data/NASR_Subscription/"
 
 [[resources.licenses]]
 name  = "other-open"
